# ai-news-noti

./: Dockerfile  README.md  deploy.sh  invoke.sh  main.py  pyproject.toml  requirements.txt  run-locally.sh  schedule.sh
src/ai_news_noti/: constants.py  tasks.py
tests/: test.py
